2015-12-05  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Unravel blending, part 2.

	* graph/gblender.c (gblender_reset_key, gblender_reset_channel_key):
	Set alpha grid values explicitly.

2015-12-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Unravel blending.

	* graph/gblender.c (gblender_reset_key, gblender_reset_channel_key):
	Entrust optimizations to modern compilers, remove unused variables.

2015-11-30  Werner Lemberg  <wl@gnu.org>

	[graph] Initialize local variables after checking channel change.

	This fixes a crash if foreground color == background color.

	Problem reported by Alexei.

	* graph/gblender.h (GBLENDER_VARS): Split off initialization to...
	(GBLENDER_VARS_SET): ...this new macro.
	(GBLENDER_CHANNEL_VARS): Split off initialization to...
	(GBLENDER_CHANNEL_VARS_SET): ...this new macro.

	* graph/gblcolor.h, graph/gblhbgr.h, graph/gblhrgb.h,
	graph/gblvbgr.h, graph/gblvrgb.h: Updated.

2015-11-29  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/gblender.c (gblender_clear): Fix typo.

2015-11-29  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/fttimer.c (main): Remove unused variable.

2015-11-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftcommon.c (FTDemo_Display_Clear): Speed up.

2015-11-28  Werner Lemberg  <wl@gnu.org>

	* Version 2.6.2 released.
	=========================


	Tag sources with `VER-2-6-2'.

	* README: Updated.
	* src/*.1: Updated.

2015-11-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring, ftview] Small clean-ups,

	* src/ftstring.c (event_lcdmode_change): Robustify the switch.
	* src/ftview.c (write_header): Ditto.

2015-11-25  Werner Lemberg  <wl@gnu.org>

	* src/ftstring.c: Fix compilation warnings.

2015-11-24  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Enable sub-pixel rendering,

	* src/ftstring.c (event_lcdmode_change): New function.
	(Process_Event): New event to change LCD mode.
	(event_help): Offer it.
	(main): Select light LCD filter.
